@@ -442,6 +442,15 @@ ext_api.storage.local.get({
       let sites_new = Object.keys(defaultSites).filter(x => defaultSites[x].domain && !defaultSites[x].domain.match(/^(#options_|###$)/) && !sites_default.some(key => compareKey(key, x)));
       for (let site_new of sites_new)
         sites[site_new] = defaultSites[site_new].domain;
+      // reset ungrouped sites
+      let ungrouped_sites = {
+        'The Athletic': 'theathletic.com',
+        'The Toronto Star (+ local TorStar sites)': 'thestar.com'
+      };
+      for (let key in ungrouped_sites) {
+        if (sites[key] && sites[key] !== ungrouped_sites[key])
+          sites[key] = ungrouped_sites[key];
+      }
       ext_api.storage.local.set({
         sites: sites
       });
@@ -568,11 +577,6 @@ ext_api.storage.onChanged.addListener(function (changes, namespace) {
     if (key === 'optInUpdate') {
       optin_update = storageChange.newValue;
     }
-
-    // Refresh the current tab
-    let refresh = (url_loc === 'chrome') || ((typeof storageChange.newValue === 'string') && (storageChange.newValue !== storageChange.oldValue)) || ((typeof storageChange.newValue === 'object') && (Object.keys(storageChange.newValue).length !== Object.keys(storageChange.oldValue).length));
-    if (refresh)
-      refreshCurrentTab();
   }
 });
 
@@ -1240,7 +1244,7 @@ function site_switch() {
           ext_api.storage.local.set({
             sites: sites
           }, function () {
-            true;
+            ext_api.tabs.reload({bypassCache: true});
           });
         });
       }
