@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.5.0"
+  "version": "3.2.5.1"
 }
