@@ -740,5 +740,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.5.0"
+  "version": "3.2.5.1"
 }
