@@ -1,10 +1,11 @@
 "use strict";
 var ext_api = (typeof browser === 'object') ? browser : chrome;
+var url_loc = (typeof browser === 'object') ? 'firefox' : 'chrome';
 var manifestData = ext_api.runtime.getManifest();
 var navigator_ua = navigator.userAgent;
 var navigator_ua_mobile = navigator_ua.toLowerCase().includes('mobile');
-var kiwi_browser = navigator_ua_mobile && !navigator_ua.toLowerCase().includes('yabrowser');
-var custom_switch = (manifestData.optional_permissions || manifestData.optional_host_permissions) && !kiwi_browser;
+var yandex_browser = navigator_ua_mobile && (url_loc === 'chrome') && navigator_ua.toLowerCase().includes('yabrowser');
+var custom_switch = ((manifestData.optional_permissions && manifestData.optional_permissions.length) || (manifestData.optional_host_permissions && manifestData.optional_host_permissions.length)) && !(navigator_ua_mobile && !yandex_browser);
 
 window.addEventListener("load", function () {
     document.getElementById("button-close").addEventListener("click", function () {
