@@ -12,10 +12,10 @@
     To add a new site, enter an unique title/domain (without www.).<br>
     Select options below (<a href="https://gitlab.com/magnolia1234/bypass-paywalls-chrome-clean#add-custom-site" target="_blank">see GitLab help</a>); for examples import from GitLab.<br>
     Custom sites (new) are enabled automatically in <small><button><a href="options.html" style="text-decoration:none;color:inherit">Options</a></button></small> (cookies will be blocked by default unless you enable allow_cookies).<br>
-    If you want to use custom sites (for non-listed sites) enable it in <small><button><a href="optin/opt-in.html" style="text-decoration:none;color:inherit">Opt-in</a></button></small>
+    If you want to use custom sites (for unlisted sites) enable it in <small><button><a href="optin/opt-in.html" style="text-decoration:none;color:inherit">Opt-in</a></button></small>
     <strong>Custom sites enabled: <span id="custom-enabled"></span></strong><br>
-    You can also just request permissions for the custom sites & post-release added sites (below).<br>
-    If permission is missing the icon badge will contain a 'C' (or '+C' if you can import the custom site from GitLab; when no fix X).
+    You can also just request host permissions for the custom sites & post-release added sites (below).<br>
+    If host permission is missing the icon badge will contain a 'C' (or '+C' if you can import the custom site from GitLab; when no fix X).
     <br><br>
   </div>
   <div id='add_site'></div>
